--- a/scss/site/components/_components.side-menu.scss
+++ b/scss/site/components/_components.side-menu.scss
@@ -1,13 +1,9 @@
-header {
-    position: relative;
-}
-
 .side-menu {
     $this: &;
 
     &__menu {
         position: absolute;
-        z-index: 1;
+        z-index: var(--z-index--site-menu);
         background: lightgray;
         min-width: 30em;
         max-width: 100vw;
